src/test/ui/where-clauses/where-for-self-2.stderr
error: implementation of `Bar` is not general enough
  --> $DIR/where-for-self-2.rs:21:5
   |
LL |     foo(&X); //~ ERROR implementation of `Bar` is not general enough
   |     ^^^
   |
   = note: Due to a where-clause on `foo`,
   = note: `Bar` would have to be implemented for the type `&'0 u32`, for any lifetime `'0`
   = note: but `Bar` is actually implemented for the type `&'1 u32`, for some specific lifetime `'1`

error: aborting due to previous error

